(library
 (public_name ortac-wrapper.plugin)
 (name ortac_wrapper)
 (libraries cmdliner fmt ppxlib.astlib gospel ortac-core ortac-core.register)
 (preprocess
  (pps ppxlib.metaquot)))

(plugin
 (name wrapper)
 (package ortac-wrapper)
 (libraries ortac-wrapper.plugin)
 (site
  (ortac-core plugins)))
